correct spacing error on ProjectsContainer bottom of component

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -4,6 +4,7 @@
 
 .contact-main {
   animation: fade-in ease 1s;
+  padding-bottom: 5%;
 }
   
   input {
